<!--
  ~ /*
  ~ * Software Name: GPSGhoster
  ~ * SPDX-FileCopyrightText: Copyright (c) 2023 Orange
  ~ * SPDX-License-Identifier: BSD 3-Clause "New"
  ~ *
  ~ * This software is distributed under the BSD-3-Clause license.
  ~ *
  ~ * Author: Franck SEROT <frank.serot@orange.com> et al.
  ~ */
  -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.orange.gpsghoster.ui.settings.DatabaseFragment"
        app:icon="@drawable/ic_database"
        app:key="@string/database_header_key"
        app:title="@string/database_header_title" />

    <Preference
        app:fragment="com.orange.gpsghoster.ui.settings.OpenStreetMapFragment"
        app:icon="@drawable/ic_map"
        app:key="@string/osm_header_key"
        app:title="@string/osm_header_title" />

    <Preference
        app:fragment="com.orange.gpsghoster.ui.settings.LocationServiceFragment"
        app:icon="@drawable/ic_location"
        app:key="@string/location_service_header_key"
        app:title="@string/location_service_header_title" />

</PreferenceScreen>